hw2/deploy-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: canary
  name: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: canary
    spec:
      containers:
        - image: httpd
          name: httpd
          volumeMounts:
            - name: httpd-index
              mountPath: /usr/local/apache2/htdocs/
      volumes:
        - name: httpd-index
          configMap:
            name: httpd-index-canary
