hw2/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: canary
  name: canary
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: canary
  type: ClusterIP
status:
  loadBalancer: {}
