hw2/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: prod
  name: prod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: prod
  type: ClusterIP
status:
  loadBalancer: {}
